syntax = "proto3";

package task;

option go_package = "./internal/ports/grpc";

service Task {
  rpc GetTaskTypes(GetTaskTypesRequest) returns (TaskTypesResponse) {}
}

message GetTaskTypesRequest {
  string accessToken = 1;
  string teamID = 2;
}

message TaskTypesResponse {
  message TaskTypes {
    string name = 1;
    int32 id = 2;
    bool isActive = 3;
  }
  repeated TaskTypes taskTypes = 1;
}